feat: added transactions endpoint
